# f-stack

dpdk/: compile
dpdk/app/test-pmd/: Makefile
dpdk/config/: common_base
dpdk/drivers/net/: Makefile
dpdk/drivers/net/yusur2/: Makefile  meson.build  rte_pmd_yusur2.c  rte_pmd_yusur2.h  rte_pmd_yusur2_version.map  yusur2_82599_bypass.c  yusur2_bypass.c  yusur2_bypass.h  yusur2_bypass_api.h  yusur2_bypass_defines.h  yusur2_ethdev.c  yusur2_ethdev.h  yusur2_fdir.c  yusur2_flow.c  yusur2_ipsec.c  yusur2_ipsec.h  yusur2_logs.h  yusur2_pf.c  yusur2_regs.h  yusur2_rxtx.c  yusur2_rxtx.h  yusur2_rxtx_vec_common.h  yusur2_rxtx_vec_neon.c  yusur2_rxtx_vec_sse.c  yusur2_tm.c  yusur2_vf_representor.c
dpdk/drivers/net/yusur2/base/: README  meson.build  yusur2_82598.c  yusur2_82598.h  yusur2_82599.c  yusur2_82599.h  yusur2_api.c  yusur2_api.h  yusur2_common.c  yusur2_common.h  yusur2_dcb.c  yusur2_dcb.h  yusur2_dcb_82598.c  yusur2_dcb_82598.h  yusur2_dcb_82599.c  yusur2_dcb_82599.h  yusur2_hv_vf.c  yusur2_hv_vf.h  yusur2_mbx.c  yusur2_mbx.h  yusur2_osdep.h  yusur2_phy.c  yusur2_phy.h  yusur2_sn2100.c  yusur2_sn2100.h  yusur2_type.h  yusur2_vf.c  yusur2_vf.h  yusur2_x540.c  yusur2_x540.h  yusur2_x550.c  yusur2_x550.h
dpdk/mk/: rte.app.mk
dpdk/usertools/: dpdk-devbind.py
